--- a/views/index.pug
+++ b/views/index.pug
@@ -2,7 +2,7 @@ html
   head
     title UserID
   body(style='display: flex;justify-content:center;align-items:center;')
-    h1(style='font-size:4em; color:#333;')= user
+    h1(style='font-size:8em; color:#333;font-family:sans-serif;')= user
     script.
       console.log(`reloaded: ${new Date()}`)
       window.setTimeout(() => {
